refactor(catalog): Refactor of catalog format and endpoints
 - Removed `/runtimes` endpoint and replaced it with `/enums` and
   `/enums/:id` that return either the list of values for all available
   enum fields (not just `runtime`) or the list of values for a single
   enum field select by field id respectively.
 - Capability fields of type `enum` now have a `values` attribute that
   only contains a list of allowed values. For the full list of values
   and their names, descriptions, icons, etc you need to look at the
   result of `/enums`.
 - OpenAPI document was adjusted to the new endpoints and design

Fixes #45
